--- a/start.html
+++ b/start.html
@@ -8,6 +8,7 @@
   <title>Homepage</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/slider.css">
+  <link rel="stylesheet" href="./css/start.css">
 </head>
 
 <body>
@@ -85,7 +86,7 @@
     <h1 class="arrivals bold">New Arrivals</h1>
   </article>
 
-  <article class="mg flex space">
+  <article class="mg top flex space">
     <section class="tag px-14">
       <img src="./img/ph1.png" alt="ph1" class="bot">
       <span class="new">NEW</span>
