--- a/start.html
+++ b/start.html
@@ -112,48 +112,56 @@
   </article>
 
   <article class="all flex cent align border-bottom">
-    <button class="btn bold">All arrivals</button>
+    <button class="btn bold px-24">All arrivals</button>
   </article>
 
-  <article class="mg flex down border-bottom">
-    <section>
-      <h3 class="label bold px-16">Quick Links</h3>
-      <div class="flex col">
-        <span class="px-14">Store locator</span>
-        <span class="px-14">Gift cards</span>
-        <span class="px-14">Size guide</span>
-        <span class="px-14">About us</span>
-        <span class="px-14">Support</span>
-      </div>
-    </section>
-    <section class="border-right">
-      <h3 class="label bold px-16">Customer Care</h3>
-      <div class="flex col">
-        <span class="px-14">Customer service</span>
-        <span class="px-14">Track my order</span>
-        <span class="px-14">Return policy</span>
-        <span class="px-14">Shipping & delivery</span>
-        <span class="px-14">Contact us</span>
-        <span class="px-14">Careers</span>
-      </div>
-    </section>
-    <section class="area">
-      <h3 class="label bold px-16">Questions</h3>
-      <span class="us">Tweet us
-        <b>@template</b>
-      </span>
-      <div class="service px-16">
-        <i>We have our own delivery service which operates in 23 major European cities. Delivery time - 3-5 days.</i>
-      </div>
-      <div class="social">
-        <img src="./img/fb.png" alt="facebook">
-        <img src="./img/twi.png" alt="twitter">
-      </div>
-    </section>
-    <section>
-      <h3 class="label bold px-16">Order by phone</h3>
-      <span>8-800-409-47-12</span>
-    </section>
+  <article class="flex down mg border-bottom width">
+    <div class="flex grow border-right">
+      <section class="flex col grow">
+        <h3 class="label bold px-16">Quick Links</h3>
+        <div class="flex col">
+          <span class="px-14">Store locator</span>
+          <span class="px-14">Gift cards</span>
+          <span class="px-14">Size guide</span>
+          <span class="px-14">About us</span>
+          <span class="px-14">Support</span>
+        </div>
+      </section>
+      <section class="flex col grow">
+        <h3 class="label bold px-16">Customer Care</h3>
+        <div class="flex col">
+          <span class="px-14">Customer service</span>
+          <span class="px-14">Track my order</span>
+          <span class="px-14">Return policy</span>
+          <span class="px-14">Shipping & delivery</span>
+          <span class="px-14">Contact us</span>
+          <span class="px-14">Careers</span>
+        </div>
+      </section>
+    </div>
+    <div class="flex grow col">
+      <section class="flex grow">
+        <div class="flex col grow area">
+          <h3 class="label bold px-16">Questions</h3>
+          <span class="us">Tweet us
+            <b>@template</b>
+          </span>
+        </div>
+        <div class="flex col grow">
+          <h3 class="label bold px-16">Order by phone</h3>
+          <span>8-800-409-47-12</span>
+        </div>
+      </section>
+      <section class="flex col grow area">
+        <div class="service px-16">
+          <i>We have our own delivery service which operates in 23 major European cities. Delivery time - 3-5 days.</i>
+        </div>
+        <div class="social">
+          <img src="./img/fb.png" alt="facebook">
+          <img src="./img/twi.png" alt="twitter">
+        </div>
+      </section>
+    </div>
   </article>
 
   <footer class="mg flex space align">
