Start for tablet

--- a/start.html
+++ b/start.html
@@ -78,7 +78,7 @@
       <h3 class="title bold pos">Nike Red</h3>
     </section>
     <section class="block width right">
-      <img src="./img/right.png" alt="Caps & Hats" class="high">
+      <img src="./img/right.png" alt="Caps & Hats" class="high" id="sale">
       <div class="flex col cent align pos">
         <h3 class="title bold">Caps & Hats</h3>
         <i class="sale px-16">Sale -50%</i>
@@ -161,7 +161,7 @@
           <i>We have our own delivery service which operates in 23 major European cities. Delivery time - 3-5 days.</i>
         </div>
         <article class="flex space align">
-          <div class="social" id="b1">
+          <div class="social" id="before">
             <img src="./img/fb.png" alt="facebook">
             <img src="./img/twi.png" alt="twitter">
           </div>
@@ -175,7 +175,7 @@
     <h3 class="bold">Share
       <span class="share px-12">1437</span>
     </h3>
-    <section class="flex foot space" id="b2">
+    <section class="flex foot space" id="after">
       <h6 class="bold px-12">Legal notice</h6>
       <h6 class="bold px-12">Privacy policy</h6>
       <h6 class="bold px-12">Site map</h6>
