--- a/start.html
+++ b/start.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/slider.css">
   <link rel="stylesheet" href="./css/start.css">
-  <link rel="stylesheet" href="./css/media.css">
+  <link rel="stylesheet" href="./css/media/media.css">
+  <link rel="stylesheet" href="./css/media/media-start.css">
 </head>
 
 <body>
@@ -185,6 +186,7 @@
   <script src="./js/slider.js"></script>
   <script src="./js/toggle.js"></script>
   <script src="./js/resize.js"></script>
+  <script src="./js/start.js"></script>
 </body>
 
 </html>
