Catalog for mobile

--- a/catalog.html
+++ b/catalog.html
@@ -175,7 +175,7 @@
     </section>
   </article>
 
-  <article class="mark flex cent align border-bottom top">
+  <article class="mg mark flex cent align border-bottom top">
     <button class="btn bold px-24">Show more</button>
   </article>
 
@@ -187,9 +187,9 @@
         <i class="white sale px-16">For men</i>
       </div>
     </section>
-    <section class="flex width">
+    <section class="flex width rep">
       <div class="block border-right">
-        <img src="./img/repair.png" alt="Repair" class="high rep">
+        <img src="./img/repair.png" alt="Repair" class="high width">
         <div class="flex col cent align abs">
           <h3 class="title bold white">Repair Patches</h3>
           <p class="sale px-16 white">£150.50</p>
