Media Queries for item

--- a/catalog.html
+++ b/catalog.html
@@ -270,6 +270,7 @@
 
   <script src="./js/select.js"></script>
   <script src="./js/range.js"></script>
+  <script src="./js/toggle.js"></script>
   <script src="./js/resize.js"></script>
 </body>
 
