--- a/catalog.html
+++ b/catalog.html
@@ -94,28 +94,36 @@
   </article>
 
   <article class="mg top flex space">
-    <section class="tag px-14">
-      <img src="./img/ph1.png" alt="ph1" class="bot">
-      <span class="new">NEW</span>
-      <h4 class="bold">Only Skinny Jeans</h4>
-      <p>£65.50</p>
-    </section>
-    <section class="tag px-14">
-      <img src="./img/ph2.png" alt="ph2" class="bot">
-      <span class="new">NEW</span>
-      <h4 class="bold">Neck Knitted Jumper</h4>
-      <p>£76.25</p>
-    </section>
-    <section class="tag px-14">
-      <img src="./img/ph3.png" alt="ph3" class="bot">
-      <h4 class="bold">Turtle Neck Jumper in Rib</h4>
-      <p>£130.25</p>
-    </section>
-    <section class="tag px-14">
-      <img src="./img/ph4.png" alt="ph4" class="bot">
-      <h4 class="bold">With Pathwork Crochet</h4>
-      <p>£80.60</p>
-    </section>
+    <a href="./item.html">
+      <section class="tag px-14">
+        <img src="./img/ph1.png" alt="ph1" class="bot">
+        <span class="new">NEW</span>
+        <h4 class="bold">Only Skinny Jeans</h4>
+        <p>£65.50</p>
+      </section>
+    </a>
+    <a href="./item.html">
+      <section class="tag px-14">
+        <img src="./img/ph2.png" alt="ph2" class="bot">
+        <span class="new">NEW</span>
+        <h4 class="bold">Neck Knitted Jumper</h4>
+        <p>£76.25</p>
+      </section>
+    </a>
+    <a href="./item.html">
+      <section class="tag px-14">
+        <img src="./img/ph3.png" alt="ph3" class="bot">
+        <h4 class="bold">Turtle Neck Jumper in Rib</h4>
+        <p>£130.25</p>
+      </section>
+    </a>
+    <a href="./item.html">
+      <section class="tag px-14">
+        <img src="./img/ph4.png" alt="ph4" class="bot">
+        <h4 class="bold">With Pathwork Crochet</h4>
+        <p>£80.60</p>
+      </section>
+    </a>
   </article>
 
   <article class="mg all flex cent align">
