--- a/start.html
+++ b/start.html
@@ -75,11 +75,15 @@
 
   <article class="banners flex border-bottom">
     <section class="block width border-right">
-      <img src="./img/left.png" alt="Nike Red" class="high">
+      <a href="./item.html">
+        <img src="./img/left.png" alt="Nike Red" class="high">
+      </a>
       <h3 class="title bold pos">Nike Red</h3>
     </section>
     <section class="block width right">
-      <img src="./img/right.png" alt="Caps & Hats" class="high" id="sale">
+      <a href="./catalog.html" id="sale">
+        <img src="./img/right.png" alt="Caps & Hats" class="high">
+      </a>
       <div class="flex col cent align pos">
         <h3 class="title bold">Caps & Hats</h3>
         <i class="sale px-16">Sale -50%</i>
