--- a/shopping-bag.html
+++ b/shopping-bag.html
@@ -65,17 +65,17 @@
     </section>
     <section class="flex tag px-14 grow">
       <img src="./img/ph10.png" alt="ph10" class="bot">
-      <article class="flex col field">
+      <div class="flex col field">
         <h4 class="bold">Paul & Joe Sister Jumper with Neon Trims</h4>
         <p class="px-16 bold">£19.75</p>
         <span>Color: Blue</span>
         <span>Size: UK 18</span>
         <span class="flex align">Quantity:
-          <button class="sign minus"></button>0
-          <button class="sign plus"></button>
+          <button class="sign minus" data-action="minusItem"></button>0
+          <button class="sign plus" data-action="plusItem"></button>
         </span>
         <button class="remove bold red">Remove item</button>
-      </article>
+      </div>
     </section>
   </article>
 
@@ -83,13 +83,13 @@
     <section class="flex tag px-14 grow">
       <img src="./img/ph6.png" alt="ph6" class="bot">
       <div class="flex col field">
-        <h4 class="bold">Boyfriend T-Shirt with Bohemian Print</h4>
+        <h4 class="bold">Boyfriend T-Shirt with Bohemian print</h4>
         <p class="px-16 bold">£90.00</p>
         <span>Color: Black</span>
         <span>Size: UK 18</span>
         <span class="flex align">Quantity:
-          <button class="sign minus"></button>0
-          <button class="sign plus"></button>
+          <button class="sign minus" data-action="minusItem"></button>0
+          <button class="sign plus" data-action="plusItem"></button>
         </span>
         <button class="remove bold red">Remove item</button>
       </div>
@@ -97,17 +97,17 @@
     <section class="flex tag px-14 grow">
       <img src="./img/ph2.png" alt="ph2" class="bot">
       <span class="new">NEW</span>
-      <article class="flex col field">
+      <div class="flex col field">
         <h4 class="bold">Neck Knitted Jumper</h4>
         <p class="px-16 bold">£76.25</p>
         <span>Color: Green</span>
         <span>Size: UK 19</span>
         <span class="flex align">Quantity:
-          <button class="sign minus"></button>0
-          <button class="sign plus"></button>
+          <button class="sign minus" data-action="minusItem"></button>0
+          <button class="sign plus" data-action="plusItem"></button>
         </span>
         <button class="remove bold red">Remove item</button>
-      </article>
+      </div>
     </section>
   </article>
 
